istio-manifests/11-virtual-service-cart.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cart-retry-policy
  namespace: dev
spec:
  hosts:
  - cart
  http:
  - route:
    - destination:
        host: cart
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
