istio-manifests/13-virtual-service-product.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry-policy
  namespace: dev
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 20s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
