istio-manifests/14-virtual-service-order.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-retry-policy
  namespace: dev
spec:
  hosts:
  - order
  http:
  - route:
    - destination:
        host: order
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
