istio-manifests/15-virtual-service-location.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: location-retry-policy
  namespace: dev
spec:
  hosts:
  - location
  http:
  - route:
    - destination:
        host: location
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
