istio-manifests/16-virtual-service-inventory.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-retry-policy
  namespace: dev
spec:
  hosts:
  - inventory
  http:
  - route:
    - destination:
        host: inventory
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
