istio-manifests/17-virtual-service-tax.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tax-retry-policy
  namespace: dev
spec:
  hosts:
  - tax
  http:
  - route:
    - destination:
        host: tax
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
