istio-manifests/18-virtual-service-rating.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rating-retry-policy
  namespace: dev
spec:
  hosts:
  - rating
  http:
  - route:
    - destination:
        host: rating
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
