istio-manifests/19-virtual-service-media.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: media-retry-policy
  namespace: dev
spec:
  hosts:
  - media
  http:
  - route:
    - destination:
        host: media
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
