istio-manifests/20-virtual-service-search.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: search-retry-policy
  namespace: dev
spec:
  hosts:
  - search
  http:
  - route:
    - destination:
        host: search
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,gateway-error,connect-failure,refused-stream,unavailable"
