istio-manifests/01-authorization-policy-cart.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cart
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/storefront-bff"
        - "cluster.local/ns/dev/sa/order"
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "PATCH"]
