istio-manifests/02-authorization-policy-customer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-customer
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/storefront-bff"
        - "cluster.local/ns/dev/sa/order"
        # - "cluster.local/ns/dev/sa/rating"
        # - "cluster.local/ns/dev/sa/recommendation"
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "PATCH"]
