istio-manifests/04-authorization-policy-order.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: order
  action: ALLOW
  rules:
  # - from:
  #   - source:
  #       principals:
  #       - "cluster.local/ns/dev/sa/payment"
  #   to:
  #   - operation:
  #       methods: ["GET", "POST", "PUT", "DELETE", "PATCH"]
