istio-manifests/07-authorization-policy-tax.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-tax
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/order"
    to:
    - operation:
        methods: ["GET"]
