istio-manifests/08-authorization-policy-rating.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-rating
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rating
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/product"
    to:
    - operation:
        methods: ["GET", "POST"]
