istio-manifests/09-authorization-policy-media.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-media
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/product"
        - "cluster.local/ns/dev/sa/cart"
        - "cluster.local/ns/dev/sa/payment"
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
